--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "marked": "^4.0.18",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
