--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
     "next": "12.2.5",
+    "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-format": "^4.0.1",
+    "rehype-highlight": "^5.0.2",
+    "rehype-slug": "^5.0.1",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.45.0"
   },
