--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
     "next": "12.2.5",
+    "next-themes": "^0.2.0",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +23,9 @@
     "rehype-format": "^4.0.1",
     "rehype-highlight": "^5.0.2",
     "rehype-slug": "^5.0.1",
+    "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.45.0"
   },
