--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.2.5",
     "esbuild": "^0.14.54",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
     "next": "12.2.5",
+    "next-compose-plugins": "^2.2.1",
     "next-themes": "^0.2.0",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
