--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.2.5",
     "next-compose-plugins": "^2.2.1",
     "next-themes": "^0.2.0",
+    "nodemailer": "^6.7.8",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
