--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "esbuild": "^0.14.54",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
-    "next": "12.2.5",
+    "next": "^12.3.1",
     "next-compose-plugins": "^2.2.1",
     "next-themes": "^0.2.0",
     "nodemailer": "^6.7.8",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
