--- a/package.json
+++ b/package.json
@@ -9,33 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^12.2.5",
-    "esbuild": "^0.14.54",
-    "gray-matter": "^4.0.3",
-    "mdx-bundler": "^9.0.1",
-    "next": "^12.3.1",
-    "next-compose-plugins": "^2.2.1",
-    "next-themes": "^0.2.0",
-    "nodemailer": "^6.7.8",
-    "prism-react-renderer": "^1.3.5",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.2.1",
+    "next": "13.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "reading-time": "^1.5.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-code-titles": "^1.1.0",
-    "rehype-format": "^4.0.1",
-    "rehype-highlight": "^5.0.2",
-    "rehype-slug": "^5.0.1",
-    "remark": "^14.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-mdx-images": "^2.0.0",
-    "remark-toc": "^8.0.1",
-    "styled-components": "^5.3.5",
-    "styled-icons": "^10.45.0"
-  },
-  "devDependencies": {
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "yarn-upgrade-all": "^0.7.1"
+    "react-dom": "18.2.0"
   }
 }
