--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "^12.2.5",
     "esbuild": "^0.14.54",
+    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
     "next": "^12.3.1",
